--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,14 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Home</title>
+  <link rel="stylesheet" href="styles.css">
 
-</div>
+</head>
+<body>
+  <img src="/public/images/beer.png">
+  <button>Check the Beers!</button>
+  <button>Check a Random Reer!</button>
+</body>
+</html>
